# tubevault

./: .gitignore  CONTRIBUTIONS.md  README.md  build-articles.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: update-users.yml
articles/: about.md  overview.md
articles/overview/features/: early_video_formats.md  hide_view_count.md  hiding.md  noindex.md  recommend_itself.md  redirects.md
articles/overview/validation/: channel_ids.md  incremental_ids.md  videos.md
functions/: _middleware.ts
public/: _redirects  manifest.json  robots.txt  users.json  videos.json
public/data/: first_100k.csv  first_10k.csv
public/videos-archive/: MykmTeTiooA.mkv
scripts/: generate-json-ld.js  generate-sitemap.js  inject-json-ld.js
scripts/update-users/: Cargo.toml
scripts/update-users/src/: main.rs
src/: App.tsx  index.tsx
src/components/: DocsPage.tsx  HomePage.tsx  Layout.tsx  NotFoundPage.tsx  OldestVideosPage.tsx  UsersPage.tsx  interactive-components.js
src/styles/: index.css  tubevault.css  youtube-minimal.css
