[package]
name = "update-users"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
youtubei = "0.1"
anyhow = "1.0"
youtube = "0.1.1"
chrono = { version = "0.4", features = ["serde"] }
